changes in 1.4.0
    - resolved issue #90 "JCasUtil.isCovered() is named somewhat confusing"
    - resolved issue #104 "JCasUtil.selectCovered should accept AnnotationFS"
    - resolved issue #79 "Use PropertyEditors to convert parameter values"

changes in 1.3.1
    - resolved issue #115 "AAEs to run multi-step pipelines"
	- resolved issue #109 "Support nested resources"

changes in 1.3.0
	- resolved issue #112 "Several create() methods missing from FSCollectionFactory"
	- resolved issue #111 "Several methods in FSCollectionFactory need generics"
	- resolved issue #110 "All fillArrayFS methods in FSCollectionFactory are broken"
	- resolved issue #108 "Update to latest Sonatype OSS POM"
	- resolved issue #107 "Update to UIMA 2.4.0"
	- resolved issue #106 "Deprecate TypeSystemDescriptionFactory.createTypeSystemDescription(Class<?>...)"
	- resolved issue #103 "Resource_ImplBase initialize() does not use generics"
	- resolved issue #101 "CASDumpWriter doesn't dump binary Sofa data"
	- resolved issue #100 "Allow binding external resources in the same way as setting parameters"
	- resolved issue #99 "Add support/test-case for ParameterizedDataResource "
	- resolved issue #98 "Setting parameters on a SharedResourceObject"
	- resolved issue #86 "Add (J)CasUtil.selectBetween"
	- resolved issue #80 "Allow injection of logger"

changes in 1.2.0
    - resolved issue #88 "runPipeline() never calls destroy() on the analysis engines"
    - resolved issue #87 "DocumentAnnotation cannot be used in createTypePriorities(Class...)"
    - resolved issue #85 "Configuring external resources for non-uimaFIT components is too complex"
    - resolved issue #82 "upgrade to Apache UIMA 2.3.1"
    - resolved issue #81 "JCasUtil.selectFollowing doesn't start after the given annotation"
    - resolved issue #78 "Remove findbugs dependency from uimaFIT"
    - resolved issue #77 "Avoid directly instantiating internal UIMA component classes"