@@ -342,7 +342,9 @@ public class JCasUtil {
 	 * Does not use subiterators.
 	 * <p>
 	 * <b>Note:</b> this is significantly slower than using
-	 * {@link #selectCovered(JCas, Class, AnnotationFS)}
+	 * {@link #selectCovered(JCas, Class, AnnotationFS)}. It is possible to use {@code 
+	 * selectCovered(jCas, cls, new Annotation(jCas, int, int))}, but that will allocate memory
+	 * in the jCas for the new annotation. If you do that repeatedly many times, memory may fill up. 
 	 *
 	 * @param <T>
 	 *            the JCas type.
@@ -366,7 +368,8 @@ public class JCasUtil {
 	 * Iterates over all annotations to find the covering annotations.
 	 *
 	 * <p>
-	 * <b>Note:</b> this is <b>REALLY SLOW!</b> You don't want to use this.
+	 * <b>Note:</b> this is <b>REALLY SLOW!</b> You don't want to use this. Instead, consider
+	 * using {@link #indexCovering(JCas, Class, Class)} or a {@link ContainmentIndex}.
 	 *
 	 * @param <T>
 	 *            the JCas type.
